--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -30,7 +30,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "@firebase/firestore",
+              "@firebase/auth",
+              "@angular/fire/firestore"
+            ]
           },
           "configurations": {
             "production": {
@@ -121,8 +126,13 @@
               "devServerTarget": "Codebook:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Codebook"
 }
