Started adding Monaco editor (not so easy)

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "firebase": "^7.23.0",
+    "monaco-editor": "^0.21.2",
+    "ngx-monaco-editor": "^9.0.0",
     "ngx-toastr": "^13.1.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.5",
