--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/assets",
               {
                 "glob": "**/*",
-                "input": "../node_modules/ngx-monaco-editor/assets/monaco",
+                "input": "node_modules/ngx-monaco-editor/assets/monaco",
                 "output": "./assets/monaco/"
               }
             ],
