--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "angular-resize-event": "^2.0.0",
     "firebase": "^7.23.0",
     "monaco-editor": "^0.21.2",
     "ngx-monaco-editor": "9.0.0",
