Added WASM service and wasm related files

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               }
             ],
             "styles": ["src/styles.scss"],
-            "scripts": [],
+            "scripts": [
+              "src/assets/wasm_exec.js"
+            ],
             "allowedCommonJsDependencies": [
               "@firebase/firestore",
               "@firebase/auth",
